corrected an issue with alignment on mobile

--- a/scss/components/_c-content-summary.scss
+++ b/scss/components/_c-content-summary.scss
@@ -44,7 +44,7 @@
     padding: 0.5rem 2rem;
 
     @include media-breakpoint-down(xs) {
-      padding: 1rem 0.5rem;
+      padding: 1rem 0;
     }
 
     > :not(:last-child) {
